# sysint_exam

00 Data parsing server - Part II/: app.js  note.txt  package-lock.json  package.json
00._Data_parsing_Server/: package-lock.json
01a [Individual] Data parsing servers - Part I/: data_handling.js  data_handling.py  data_handling_solution2.js  data_handling_solution2.py  me.json  note.txt  package-lock.json  package.json
01a._Data_Files/: data_handling.js  package-lock.json  package.json
03a._Data_parsing_server_Part2/: note.txt
03a._Data_parsing_server_Part2/python/: main.py  pyproject.toml
03a._Data_parsing_server_Part2/python/my_files/: me.txt
03b._[Pair] Database granular access/: Integrator_ testning af troels database.docx
04a [Individual] SSE Example/: note.txt
04a._SSE/client/: index.html
04b._[Pair] Database granular access/: Integrator_ noter af test på victors database.docx  Victors opgave (eksamen).docx
05a._[Pair] Expose and Integrate with a Webhook System/: christophers_webhook.js  client.js  curl http.docx  dokumentation for webhook server opgave.docx  note.txt  package-lock.json  package.json  readMe.txt  server.js  server_receive.js  webhooks_server.js
06a._Websocket/: client.js  note.txt  package-lock.json  package.json  readme.txt  server.js
08a._Document a Database/: Use of a tool to document a database.docx
08b Migrate from One Database to Another/: migrate.py  note.txt
08c/: app.js  package-lock.json  package.json
08c Auth Integration/: Auth0 valg og forklaring.docx  app.js  note.txt  package-lock.json  package.json
(+106 files in other folders)
